samples/_failures_safe/1761602276_4bd787_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_25212ac0.c: In function ‘main’:
./samples/SAFE/__tmp_25212ac0.c:147:19: error: expected ‘;’ at end of input
  147 |             printf
      |                   ^
      |                   ;
./samples/SAFE/__tmp_25212ac0.c:147:13: error: expected declaration or statement at end of input
  147 |             printf
      |             ^~~~~~
./samples/SAFE/__tmp_25212ac0.c:147:13: error: expected declaration or statement at end of input
